Fait) analyse de performance avec jvisualvm . T.call est coûteux ;-)